// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Color Card should match the snapshot when the card is locked 1`] = `
<article
  style={
    Object {
      "background": "#000000",
      "borderRadius": "8px",
      "boxShadow": "4px 4px 20px black",
      "display": "flex",
      "flexDirection": "column",
      "height": "30vh",
      "justifyContent": "flex-end",
      "marginLeft": "5px",
      "marginRight": "5px",
      "padding": "20px",
      "width": "30vh",
    }
  }
>
  <img
    alt="unlocked"
    onClick={[Function]}
    src="lockedIcon.svg"
  />
  <input
    className="hex-code__input"
    disabled={true}
    placeholder="#000000"
    type="text"
  />
</article>
`;

exports[`Color Card should match the snapshot when the card is not locked 1`] = `
<article
  style={
    Object {
      "background": "#FFFFFF",
      "borderRadius": "8px",
      "boxShadow": "4px 4px 20px black",
      "display": "flex",
      "flexDirection": "column",
      "height": "30vh",
      "justifyContent": "flex-end",
      "marginLeft": "5px",
      "marginRight": "5px",
      "padding": "20px",
      "width": "30vh",
    }
  }
>
  <img
    alt="unlocked"
    onClick={[Function]}
    src="unlockedIcon.svg"
  />
  <input
    className="hex-code__input"
    disabled={true}
    placeholder="#FFFFFF"
    type="text"
  />
</article>
`;
